@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10042: Fixed the total_ordering decorator to handle cross-type
+  comparisons that could lead to infinite recursion.
+
 - Issue #10686: the email package now :rfc:`2047`\ -encodes headers with
   non-ASCII bytes (parsed by a Bytes Parser) when doing conversion to
   7bit-clean presentation, instead of replacing them with ?s.
